k8s/Environments/production/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: todo-dev
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: todo-client
          image: mahmudsharipov/todoclient:1.7
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: todo-client-service
  namespace: todo-dev
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 1666
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-client-ingress
  namespace: todo-dev
spec:
  ingressClassName: nginx
  rules:
    - host: mahmud.20.219.235.7.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-client-service
                port:
                  number: 1666
