k8s/Environments/production/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: todo-dev
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: todo-server
          image: mahmudsharipov/todoserver:1.31
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.5"
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: todo-server-service
  namespace: todo-dev
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 1555
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-server-ingress
  namespace: todo-dev
spec:
  ingressClassName: nginx
  rules:
    - host: api.mahmud.20.219.235.7.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-server-service
                port:
                  number: 1555
